--- a/clipboard-app/index.html
+++ b/clipboard-app/index.html
@@ -17,20 +17,20 @@
 <!-- Hero Section -->
 <section id="hero">
 
-    <div class="max-w-6xl px-10 pt-16 mb-40 text-center mx-auto">
+    <div class="section-container mb-40">
         <img src="./images/logo.svg" alt="" class="mx-auto my-16">
 
-        <h3 class="mb-8 text-4xl text-center text-darkGrayishBlue font-bold md:text-5xl">A history of everything you
+        <h3>A history of everything you
             copy</h3>
 
-        <p class="max-w-3xl mx-auto mb-10 text-2xl text-grayishBlue">
+        <p class="section-content mb-10">
             Clipboard allows you to track and organize
             everything you copy. Instantly access your clipboard on all your
             devices
         </p>
 
         <!-- Hero Actions Container -->
-        <div class="flex flex-col space-y-8 items-center justify-center md:flex-row md:space-y-0 md:space-x-8">
+        <div class="actions-container">
             <a href="#"
                class="w-full md:w-auto px-8 py-4 rounded-full shadow-lg bg-strongCyan text-white text-xl hover:opacity-80 duration-200">
                 Downlaod for iOS
@@ -41,7 +41,56 @@
             </a>
         </div>
     </div>
+</section>
 
+<!-- Snippets Section -->
+<section id="snippets">
+<div class="section-container my-20">
+    <h3>Keep track of your snippets</h3>
+    <p class="section-content mb-24 text-xl">
+        Clipboard instantly stores any item you copy in the cloud, meaning you
+        can access your snippets immediately on all your devices. Our Mac and
+        iOS apps will help you organize everything.
+    </p>
+</div>
+</section>
+
+<!-- Features Section -->
+<section id="features">
+    <div class="section-container my-20">
+        <div class="relative flex flex-col md:flex-row md:space-x-32">
+
+            <!-- Image -->
+            <div class="md:w-1/2">
+                <img src="images/image-computer.png" alt="Computer" class="md:absolute top-0 right-[50%]"></img>
+            </div>
+
+            <!-- Items -->
+            <div class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md text-left md:pl-16">
+                <div class="mx-auto">
+                    <h5>Quick Search</h5>
+                    <p class="max-w-md text-grayishBlue">
+                        Easily search your snippets by content, category, web address,
+                        application, and more.
+                    </p>
+                </div>
+                <div class="mx-auto">
+                    <h5>iCloud Sync</h5>
+                    <p class="max-w-md text-grayishBlue">
+                        Instantly saves and syncs snippets across all your devices.
+                    </p>
+                </div>
+                <div class="mx-auto">
+                    <h5>Completely History</h5>
+                    <p class="max-w-md text-grayishBlue">
+                        Retrieve any snippets from the first moment you started using
+                        the app.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 </section>
 
