--- a/clipboard-app/index.html
+++ b/clipboard-app/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <!-- Items -->
-            <div class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md text-left md:pl-16">
+            <div class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16">
                 <div class="mx-auto">
                     <h5>Quick Search</h5>
                     <p class="max-w-md text-grayishBlue">
@@ -92,6 +92,63 @@
         </div>
     </div>
 
+</section>
+
+<!-- Access Section -->
+<section id="access">
+    <div class="section-container my-20">
+        <h3>Access Clipboard Anywhere</h3>
+        <p class="section-content mb-24 text-xl">
+            Whether you’re on the go, or at your computer, you can access all your
+            Clipboard snippets in a few simple clicks.
+        </p>
+
+        <img src="images/image-devices.png" alt="Devices image" class="mx-auto">
+    </div>
+</section>
+
+<!-- Supercharge section -->
+<section id="supercharge">
+    <div class="section-container my-20">
+        <h3>Supercharge your productivity</h3>
+        <p class="section-content mb-16 text-xl">
+            We've got the tools to boost your productivity.
+        </p>
+
+        <!-- Items Container -->
+        <div class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12">
+
+            <!-- Item 1 -->
+            <div class="flex flex-col items-center space-y-5">
+                <img src="images/icon-blacklist.svg" alt="Feature icon" class="mb-6">
+                <h5>Create Blacklists</h5>
+                <p class="max-w-md text-grayishBlue">
+                    Easily search your snippets by content, category, web address,
+                    application, and more.
+                </p>
+            </div>
+
+            <!-- Item 2 -->
+            <div class="flex flex-col items-center space-y-5">
+                <img src="images/icon-text.svg" alt="Blacklist icon" class="mb-6">
+                <h5>Plain Text Snippets</h5>
+                <p class="max-w-md text-grayishBlue">
+                    Remove unwanted formatting from copied text for a consistent look.
+                </p>
+            </div>
+
+            <!-- Item 3 -->
+            <div class="flex flex-col items-center space-y-5">
+                <img src="images/icon-preview.svg" alt="Blacklist icon" class="mb-6">
+                <h5>Sneak Preview</h5>
+                <p class="max-w-md text-grayishBlue">
+                    Quick preview of all snippets on your Clipboard for easy access.
+                </p>
+            </div>
+
+        </div>
+
+    </div>
 </section>
 
 </body>
