Finished footer of clipboard app

--- a/clipboard-app/index.html
+++ b/clipboard-app/index.html
@@ -45,14 +45,14 @@
 
 <!-- Snippets Section -->
 <section id="snippets">
-<div class="section-container my-20">
-    <h3>Keep track of your snippets</h3>
-    <p class="section-content mb-24 text-xl">
-        Clipboard instantly stores any item you copy in the cloud, meaning you
-        can access your snippets immediately on all your devices. Our Mac and
-        iOS apps will help you organize everything.
-    </p>
-</div>
+    <div class="section-container my-20">
+        <h3>Keep track of your snippets</h3>
+        <p class="section-content mb-24 text-xl">
+            Clipboard instantly stores any item you copy in the cloud, meaning you
+            can access your snippets immediately on all your devices. Our Mac and
+            iOS apps will help you organize everything.
+        </p>
+    </div>
 </section>
 
 <!-- Features Section -->
@@ -107,7 +107,7 @@
     </div>
 </section>
 
-<!-- Supercharge section -->
+<!-- Supercharge Section -->
 <section id="supercharge">
     <div class="section-container my-20">
         <h3>Supercharge your productivity</h3>
@@ -150,6 +150,82 @@
 
     </div>
 </section>
+
+<!--References Section -->
+<section id="references">
+    <div class="section-container flex flex-col items-center justify-between space-y-16 my-44 md:flex-row md:space-y-0">
+        <img src="images/logo-google.png" alt="Reference Logo">
+        <img src="images/logo-ibm.png" alt="Reference Logo">
+        <img src="images/logo-microsoft.png" alt="Reference Logo">
+        <img src="images/logo-hp.png" alt="Reference Logo">
+        <img src="images/logo-vector-graphics.png" alt="Reference Logo">
+    </div>
+
+</section>
+
+<!-- Bottom CTA Section -->
+<section id="bottom">
+    <div class="section-container my-20">
+        <h3> Clipboard for iOS and MacOS </h3>
+        <p class="section-content text-xl mb-10">
+            Available for free on the App Store. Download for Mac or iOS, sync
+            with iCloud and you're ready to start adding to your clipboard.
+        </p>
+
+        <!-- Actions Container -->
+        <div class="actions-container">
+            <a href="#"
+               class="w-full md:w-auto px-8 py-4 rounded-full shadow-lg bg-strongCyan text-white text-xl hover:opacity-80 duration-200">
+                Downlaod for iOS
+            </a>
+            <a href="#"
+               class="w-full md:w-auto px-8 py-4 rounded-full shadow-lg bg-lightBlue text-white text-xl hover:opacity-80 duration-200">
+                Downlaod for Mac
+            </a>
+        </div>
+
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-gray-50">
+    <div class="section-container">
+        <div class="flex flex-col items-center justify-between md:flex-row pb-10 md:pb-0">
+            <img src="images/logo.svg" alt="Logo" class="scale-50">
+
+            <!-- Menus -->
+            <div class="flex flex-col mb-10 items-center justify-between space-y-4 text-grayishBlue md:mb-0 md:space-y-0 md:flex-row md:space-x-24 md:ml-24">
+
+                <div class="flex flex-col space-y-4 md:text-left">
+                    <a href="#" class="hover:text-strongCyan">FAQs</a>
+                    <a href="#" class="hover:strongCyan">Contact Us</a>
+                </div>
+
+                <div class="flex flex-col space-y-4 md:text-left">
+                    <a href="#" class="hover:text-strongCyan">Privacy Policy</a>
+                    <a href="#" class="hover:strongCyan">Press Kit</a>
+                </div>
+
+                <div class="flex flex-col space-y-4 md:text-left">
+                    <a href="#" class="hover:text-strongCyan">Install Guide</a>
+                </div>
+            </div>
+
+            <!-- Social -->
+            <div class="flex justify-between w-32">
+                <a href="#" class="social-icon duration-200">
+                    <img src="images/icon-instagram.svg" alt="Social logo">
+                </a>
+                <a href="#" class="social-icon duration-200">
+                    <img src="images/icon-facebook.svg" alt="Social logo">
+                </a>
+                <a href="#" class="social-icon duration-200">
+                    <img src="images/icon-twitter.svg" alt="Social logo">
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
