--- a/loopstudios-project/index.html
+++ b/loopstudios-project/index.html
@@ -49,10 +49,35 @@
             </div>
         </nav>
 
-
         <div class="mt-32 mb-32 md:mx-0 md:m-32 max-w-lg mx-auto p-4 md:p-10 border-2 m text-4xl md:text-6xl font-sans text-white uppercase">
             Impressive experiences that deliver
         </div>
+    </div>
+
+</section>
+
+<!-- Feature Section -->
+<section id="feature">
+
+    <!-- Feature Container -->
+    <div class="container relative max-w-6xl flex flex-col my-32 md:flex-row px-6 md:px-0">
+
+        <!-- Image -->
+        <img src="images/desktop/image-interactive.jpg" alt="Iteractive">
+
+        <!-- Content -->
+        <div class="top-48 pr-0 md:absolute md:right-0 md:py-20 md:pl-20 mx-auto text-gray-900 bg-white">
+            <h2 class="max-w-lg mt-10 md:mt-0 mb-6 font-sans text-4xl md:text-5xl text-center md:text-left uppercase ">
+                The leader in interactive VR
+            </h2>
+            <p class="max-w-md mx-auto md:mx-0 text-center md:text-left">
+                Founded in 2011, Loopstudios has been producing world-class virtual
+                reality projects for some of the best companies around the globe.
+                Our award-winning creations have transformed businesses through
+                digital experiences that bind to their brand.
+            </p>
+        </div>
+
     </div>
 
 </section>
