Finished creations section of loopstudios project

--- a/loopstudios-project/index.html
+++ b/loopstudios-project/index.html
@@ -82,5 +82,88 @@
 
 </section>
 
+<!-- Creations Section -->
+<section id="creations">
+
+    <!-- Creations Container -->
+    <div class="container max-w-6xl mx-auto my-32 px-6 text-gray-900 md:px-0">
+
+        <!-- Creations Header -->
+        <div class="flex items-center justify-center md:justify-between mb-20">
+            <h2 class="text-4xl md:text-5xl uppercase text-center md:text-left">Our Creations</h2>
+            <button class="btn hidden md:block">See all</button>
+        </div>
+
+        <!-- Items Container -->
+        <div class="items-container">
+            <div class="group item">
+                <img src="images/desktop/image-deep-earth.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-deep-earth.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>Deep Earth</h5>
+            </div>
+            <div class="group item">
+                <img src="images/desktop/image-night-arcade.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-night-arcade.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>Night Arcade</h5>
+            </div>
+            <div class="group item">
+                <img src="images/desktop/image-soccer-team.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-soccer-team.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>Soccer Team VR</h5>
+            </div>
+            <div class="group item">
+                <img src="images/desktop/image-grid.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-grid.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>The Grid</h5>
+            </div>
+        </div>
+
+        <!-- Items Container 2 -->
+        <div class="items-container mt-10">
+            <div class="group item">
+                <img src="images/desktop/image-from-above.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-from-above.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>From up above VR</h5>
+            </div>
+            <div class="group item">
+                <img src="images/desktop/image-pocket-borealis.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-pocket-borealis.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>Pocket Borealis</h5>
+            </div>
+            <div class="group item">
+                <img src="images/desktop/image-curiosity.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-curiosity.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>The Curiosity</h5>
+            </div>
+            <div class="group item">
+                <img src="images/desktop/image-fisheye.jpg" alt="Image"
+                     class="hidden md:block w-full group-hover:scale-110 duration-200">
+                <img src="images/mobile/image-fisheye.jpg" alt="Image" class="w-full md:hidden">
+                <div class="text-gradient"></div>
+                <h5>Make it fisheye</h5>
+            </div>
+        </div>
+
+        <div class="flex items-center justify-center md:hidden mt-10">
+            <button class="btn w-full md:hidden">See all</button>
+        </div>
+    </div>
+
+</section>
+
 </body>
 </html>
