--- a/loopstudios-project/index.html
+++ b/loopstudios-project/index.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
     <title>Loopstudios Project</title>
 </head>
 <body>
@@ -47,7 +48,23 @@
                     <div class="mx-2 border-blue-100 group-hover:border-b"></div>
                 </div>
             </div>
+
+            <div class="md:hidden">
+                <button id="menu-btn" class="z-40 md:hidden hamburger focus:outline-none">
+                    <span class="hamburger-top"></span>
+                    <span class="hamburger-middle"></span>
+                    <span class="hamburger-bottom"></span>
+                </button>
+            </div>
         </nav>
+
+        <div id="menu" class="absolute top-0 bottom-0 left-0 hidden flex-col self-end w-full min-h-screen py-1 pt-40 pl-12 space-y-3 text-lg text-white uppercase bg-black">
+            <a href="#" class="hover:text-pink-500">About</a>
+            <a href="#" class="hover:text-pink-500">Careers</a>
+            <a href="#" class="hover:text-pink-500">Events</a>
+            <a href="#" class="hover:text-pink-500">Products</a>
+            <a href="#" class="hover:text-pink-500">Support</a>
+        </div>
 
         <div class="mt-32 mb-32 md:mx-0 md:m-32 max-w-lg mx-auto p-4 md:p-10 border-2 m text-4xl md:text-6xl font-sans text-white uppercase">
             Impressive experiences that deliver
