--- a/shortly-project/index.html
+++ b/shortly-project/index.html
@@ -38,6 +38,34 @@
 
   </div>
 
+</nav>
+
+<!-- Hero Section -->
+<section id="hero">
+
+  <!-- Hero Container -->
+  <div class="container flex flex-col-reverse mx-auto lg:flex-row p-6">
+
+    <!-- Content Container -->
+    <div class="flex flex-col space-y-10 mb-44 lg:mb-52 lg:mt-16 lg:w-1/2">
+      <h1 class="text-5xl lg:text-6xl text-center lg:text-left lg:max-w-md font-bold">
+        More than just shorter links
+      </h1>
+      <p class="text-2xl text-center lg:text-left lg:max-w-md text-gray-400">
+        Build your brand's recognition and get detailed insights on how your links are performing.
+      </p>
+      <div class="mx-auto lg:mx-0">
+        <a href="#" class="text-2xl py-5 px-10 lg:py-4 bg-cyan text-white font-bold rounded-full">Get Started</a>
+      </div>
+    </div>
+
+    <!-- Image Container -->
+    <div class="mb-24 lg:mb:0 lg:w-1/2 md:w-180 mx-auto">
+      <img src="images/illustration-working.svg" alt="Illustration">
+    </div>
+  </div>
+
+</section>
 
 
 
