--- a/shortly-project/index.html
+++ b/shortly-project/index.html
@@ -11,6 +11,7 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="./css/style.css">
+  <script src="js/script.js" defer></script>
   <title>Shortly Project</title>
 </head>
 <body>
@@ -67,9 +68,61 @@
 
 </section>
 
+<!-- Shorten Section -->
+<section class="relative bg-gray-100">
+
+  <!-- Section Container -->
+  <div class="max-w-4xl mx-auto p-6 space-y-6">
+
+    <!-- Form -->
+    <form action="" id="link-form"
+          class="relative flex flex-col w-full p-10 -mt-20 space-y-4 bg-darkViolet rounded-lg md:flex-row md:space-y-0 md:space-x-3">
+      <input type="text" class="flex-1 p-3 border-2 rounded-lg placeholder-yellow-500 focus:outline-none"
+             placeholder="Shorten a link here" id="link-input">
+      <button type="submit"
+              class="p-3 px-10 md:py-2 rounded-lg bg-cyan hover:bg-cyanLight text-white text-2x focus:outline-none">
+        Shorten it!
+      </button>
+      <div id="error-message" class="absolute left-10 md:left-7 bottom-3 text-red text-sm italic"></div>
+    </form>
+
+    <!-- Link 1 -->
+    <div class="flex flex-col items-center justify-between p-6 bg-white rounded-lg md:flex-row">
+      <p class="font-bold text-center text-veryDarkViolet md:text-left">
+        https://frontendmentor.io
+      </p>
+      <div class="flex flex-col items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
+        <div class="font-bold text-cyan">https://rel.ink/k4IKyk</div>
+        <button class="p-2 px-8 text-white bg-cyan rounded-lg hover:opacity-70 focus:outline-none">Copy</button>
+      </div>
+    </div>
+
+    <!-- Link 2 -->
+    <div class="flex flex-col items-center justify-between p-6 bg-white rounded-lg md:flex-row">
+      <p class="font-bold text-center text-veryDarkViolet md:text-left">
+        https://twitter.com/frontendmentor
+      </p>
+      <div class="flex flex-col items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
+        <div class="font-bold text-cyan">https://rel.ink/k4IKyk</div>
+        <button class="p-2 px-8 text-white bg-cyan rounded-lg hover:opacity-70 focus:outline-none">Copy</button>
+      </div>
+    </div>
+
+    <!-- Link 3 -->
+    <div class="flex flex-col items-center justify-between p-6 bg-white rounded-lg md:flex-row">
+      <p class="font-bold text-center text-veryDarkViolet md:text-left">
+        https://linkedin.com/frontend-mentor
+      </p>
+      <div class="flex flex-col items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
+        <div class="font-bold text-cyan">https://rel.ink/k4IKyk</div>
+        <button class="p-2 px-8 text-white bg-cyan rounded-lg hover:opacity-70 focus:outline-none">Copy</button>
+      </div>
+    </div>
+
+  </div>
 
 
-</nav>
+</section>
 
 
 </body>
