--- a/shortly-project/index.html
+++ b/shortly-project/index.html
@@ -33,7 +33,7 @@
 
     <!-- Actions Container -->
     <div class="hidden lg:flex items-center space-x-8 font-bold">
-      <a href="#" class="text-veryDarkViolet">Login</a>
+      <a href="#" class="text-grayishViolet hover:text-veryDarkViolet">Login</a>
       <a href="#" class="p-3 px-8 bg-cyan text-white rounded-full hover:opacity-70">Sign Up</a>
     </div>
 
@@ -56,7 +56,8 @@
         Build your brand's recognition and get detailed insights on how your links are performing.
       </p>
       <div class="mx-auto lg:mx-0">
-        <a href="#" class="text-2xl py-5 px-10 lg:py-4 bg-cyan text-white font-bold rounded-full">Get Started</a>
+        <a href="#" class="text-2xl py-5 px-10 lg:py-4 bg-cyan hover:opacity-70 text-white font-bold rounded-full">Get
+          Started</a>
       </div>
     </div>
 
@@ -104,7 +105,7 @@
       </p>
       <div class="flex flex-col items-center justify-end flex-1 space-x-4 space-y-2 md:flex-row md:space-y-0">
         <div class="font-bold text-cyan">https://rel.ink/k4IKyk</div>
-        <button class="p-2 px-8 text-white bg-cyan rounded-lg hover:opacity-70 focus:outline-none">Copy</button>
+        <button class="p-2 px-8 text-white bg-darkViolet rounded-lg hover:opacity-70 focus:outline-none">Copy</button>
       </div>
     </div>
 
@@ -121,8 +122,87 @@
 
   </div>
 
-
 </section>
+
+<!-- Stats Section -->
+<section id="stats" class="py-24 bg-gray-100">
+  <div class="container mx-auto px-3">
+    <h2 class="text-4xl mb-6 font-bold text-center">Advanced Statistics</h2>
+    <div class="max-w-xs md:max-w-md mx-auto text-gray-400 text-center">
+      Track how your links are performing across the web with our advanced statistics dashboard.
+    </div>
+  </div>
+</section>
+
+<!-- FeatureBox Section -->
+<section id="features" class="mb-32 bg-gray-100">
+  <div class="relative container flex flex-col md:flex-row items-start md:space-x-7 px-6 mx-auto">
+
+    <!-- Horizontal -->
+    <div class="absolute hidden md:block top-24 left-16 h-3 bg-cyan w-10/12"></div>
+
+    <!-- Vertical -->
+    <div class="absolute md:hidden w-2 h-full left-1/2 -ml-1 bg-cyan"></div>
+
+    <!-- Box 1 -->
+    <div class="relative flex flex-col p-6 space-y-6 bg-white rounded-lg md:w-1/3">
+      <!-- Image -->
+      <div class="absolute -ml-10 left-1/2 md:left-16 -top-10">
+        <!-- Image Container -->
+        <div class="flex items-center justify-center h-20 w-20 rounded-full bg-veryDarkViolet">
+          <img src="images/icon-brand-recognition.svg" alt="Icon">
+        </div>
+      </div>
+      <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+        Brand Recognition
+      </h5>
+      <p class="text-center md:text-left text-gray-400">
+        Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help instil
+        confidence in your content.
+      </p>
+    </div>
+
+
+    <!-- Box 2 -->
+    <div class="relative flex flex-col mt-24 md:mt-8 p-6 space-y-6 bg-white rounded-lg md:w-1/3">
+      <!-- Image -->
+      <div class="absolute -ml-10 left-1/2 md:left-16 -top-10">
+        <!-- Image Container -->
+        <div class="flex items-center justify-center h-20 w-20 rounded-full bg-veryDarkViolet">
+          <img src="images/icon-detailed-records.svg" alt="Icon">
+        </div>
+      </div>
+      <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+        Detailed Records
+      </h5>
+      <p class="text-center md:text-left text-gray-400">
+        Gain insights into who is clicking your links. Knowing when and where people engage with your content helps
+        inform better decisions.
+      </p>
+    </div>
+
+
+    <!-- Box 3 -->
+    <div class="relative flex flex-col mt-24 md:mt-16 p-6 space-y-6 bg-white rounded-lg md:w-1/3">
+      <!-- Image -->
+      <div class="absolute -ml-10 left-1/2 md:left-16 -top-10">
+        <!-- Image Container -->
+        <div class="flex items-center justify-center h-20 w-20 rounded-full bg-veryDarkViolet">
+          <img src="images/icon-fully-customizable.svg" alt="Icon">
+        </div>
+      </div>
+      <h5 class="pt-6 text-xl font-bold text-center capitalize md:text-left">
+        Fully Customizable
+      </h5>
+      <p class="text-center md:text-left text-gray-400">
+        Improve brand awareness and content discoverability through customizable links, supercharging audience
+        engagement.
+      </p>
+    </div>
+
+  </div>
+</section>
+
 
 
 </body>
