--- a/shortly-project/index.html
+++ b/shortly-project/index.html
@@ -135,7 +135,7 @@
 </section>
 
 <!-- FeatureBox Section -->
-<section id="features" class="mb-32 bg-gray-100">
+<section id="features" class="pb-32 bg-gray-100">
   <div class="relative container flex flex-col md:flex-row items-start md:space-x-7 px-6 mx-auto">
 
     <!-- Horizontal -->
@@ -203,6 +203,77 @@
   </div>
 </section>
 
+<!-- CTA section -->
+<section id="cta" class="py-24 bg-darkViolet">
+  <div class="flex flex-col space-y-6 p-2">
+    <h5 class="mx-auto space-y-10 text-4xl font-bold text-center text-white">Boost your links today</h5>
+    <button
+      class="px-10 py-5 md:py-3 mx-auto text-2xl font-bold text-white rounded-full bg-cyan hover:bg-cyanLight md:text-base focus:outline-none">
+      Get Started
+    </button>
+  </div>
+</section>
+
+<footer class="py-16 bg-veryDarkViolet">
+  <div
+    class="container flex flex-col md:flex-row items-center md:items-start justify-between mx-auto space-y-16 md:space-y-0">
+
+    <!-- Logo -->
+    <img src="images/logo.svg" alt="Logo">
+
+    <!-- Menu Container -->
+    <div class="flex flex-col md:flex-row space-y-16 md:space-y-0 md:space-x-20">
+
+      <!-- Menu 1 -->
+      <div class="flex flex-col items-center md:items-start w-full">
+        <div class="mb-5 font-bold text-white capitalize">Features</div>
+        <div class="flex flex-col items-center md:items-start space-y-3">
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Link shortening</a>
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Brand Links</a>
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Analytics</a>
+        </div>
+      </div>
+
+      <!-- Menu 2 -->
+      <div class="flex flex-col items-center md:items-start w-full">
+        <div class="mb-5 font-bold text-white capitalize">Resources</div>
+        <div class="flex flex-col items-center md:items-start space-y-3">
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Blog</a>
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Developers</a>
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Support</a>
+        </div>
+      </div>
+
+      <!-- Menu 3 -->
+      <div class="flex flex-col items-center md:items-start w-full">
+        <div class="mb-5 font-bold text-white capitalize">Company</div>
+        <div class="flex flex-col items-center md:items-start space-y-3">
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">About</a>
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Our Team</a>
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Careers</a>
+          <a href="" class="capitalize text-grayishViolet hover:text-cyan">Contact</a>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="flex space-x-6">
+      <a href="#">
+        <img src="images/icon-facebook.svg" alt="Icon" class="ficon">
+      </a>
+      <a href="#">
+        <img src="images/icon-twitter.svg" alt="Icon" class="ficon">
+      </a>
+      <a href="#">
+        <img src="images/icon-pinterest.svg" alt="Icon" class="ficon">
+      </a>
+      <a href="#">
+        <img src="images/icon-instagram.svg" alt="Icon" class="ficon">
+      </a>
+    </div>
+
+  </div>
+</footer>
 
 
 </body>
