Finished mobile menu of shortly project

--- a/shortly-project/index.html
+++ b/shortly-project/index.html
@@ -37,6 +37,23 @@
       <a href="#" class="p-3 px-8 bg-cyan text-white rounded-full hover:opacity-70">Sign Up</a>
     </div>
 
+    <!-- Hamburger Menu -->
+    <button id="menu-btn" type="button" class="z-40 block hamburger lg:hidden focus:outline-none">
+      <span class="hamburger-top"></span>
+      <span class="hamburger-middle"></span>
+      <span class="hamburger-bottom"></span>
+    </button>
+  </div>
+
+
+  <div id="menu" class="absolute hidden p-6 rounded-lg bg-darkViolet left-6 top-20 right-6 z-100">
+    <div class="flex flex-col items-center justify-center w-full space-y-6 font-bold text-white rounded-sm">
+      <a href="#" class="w-full text-center">Features</a>
+      <a href="#" class="w-full text-center">Pricing</a>
+      <a href="#" class="w-full text-center">Resources</a>
+      <a href="#" class="w-full pt-6 border-t text-center">Log In</a>
+      <a href="#" class="w-full py-3 rounded-full bg-cyan text-center">Sign Up</a>
+    </div>
   </div>
 
 </nav>
