--- a/testimonial-grid/index.html
+++ b/testimonial-grid/index.html
@@ -15,10 +15,10 @@
 <!-- Global Container -->
 <div class="container mx-auto max-w-7xl p-2 md:p-10">
   <!-- Grid Container -->
-  <div class="text-white">
+  <div class="grid grid-cols-1 md:grid-cols-4 grid-rows-2 gap-6 text-white">
 
     <!-- Box 1 -->
-    <div class="relative p-10 rounded-xl bg-purple-700">
+    <div class="col-span-2 relative p-10 rounded-xl bg-purple-700">
       <img src="images/bg-pattern-quotation.svg" alt=""
            class="absolute top-3 md:top-7 right-10 scale-125 md:scale-150">
 
@@ -38,7 +38,7 @@
       </div>
 
       <!-- Small Text -->
-      <div class="mt-6 opacity-50">
+      <div class="line-clamp-6 mt-6 opacity-50">
         "I was an EMT for many years before I joined the bootcamp. I've been
         looking to make a transition and have heard some people who had an
         amazing experience here. I signed up for the free intro course and
@@ -72,7 +72,7 @@
       </div>
 
       <!-- Small Text -->
-      <div class="mt-6 opacity-50">
+      <div class= "line-clamp-6 mt-6 opacity-50">
         "I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company.
         This was one of the best investments I've made in myself. Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Atque ipsam veritatis natus illum ullam ab, nesciunt rerum nobis, quibusdam ad voluptatum rem
@@ -82,7 +82,7 @@
     </div>
 
     <!-- Box 3 -->
-    <div class="hidden p-10 rounded-xl bg-white text-gray-900">
+    <div class="hidden md:block row-span-2 p-10 rounded-xl bg-white text-gray-900">
       <!-- Box Header -->
       <div class="flex space-x-4">
         <img src="images/image-kira.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300">
@@ -126,7 +126,7 @@
     </div>
 
     <!-- Box 5 -->
-    <div class="p-10 rounded-xl bg-gray-900">
+    <div class="col-span-2 p-10 rounded-xl bg-gray-900">
       <!-- Box Header -->
       <div class="flex space-x-4">
         <img src="images/image-jonathan.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300">
@@ -148,7 +148,7 @@
     </div>
 
     <!-- Box 6 -->
-    <div class="p-10 rounded-xl bg-white text-gray-900">
+    <div class="md:hidden p-10 rounded-xl bg-white text-gray-900">
       <!-- Box Header -->
       <div class="flex space-x-4">
         <img src="images/image-kira.jpg" alt="" class="w-10 h-10 rounded-full ring-2 ring-purple-300">
